Avoid overflow

--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 #loading, #menu, #gameInterface {
